--- a/app/src/main/res/layout/list_item_view.xml
+++ b/app/src/main/res/layout/list_item_view.xml
@@ -8,11 +8,16 @@
         <variable
             name="city"
             type="ru.mrfiring.shiftweatherapp.repository.domain.DomainCity" />
+        <variable
+            name="clickListener"
+            type="ru.mrfiring.shiftweatherapp.home.HomeRecyclerViewAdapter.ClickListener" />
     </data>
+
 
     <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
-        android:layout_height="wrap_content">
+        android:layout_height="wrap_content"
+        android:onClick="@{() -> clickListener.onClick(city)}">
 
         <androidx.cardview.widget.CardView
             android:layout_width="match_parent"
@@ -32,7 +37,7 @@
                     android:id="@+id/cityName"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:text="TextView"
+                    android:text="@{city.name}"
                     android:textSize="18sp"
                     app:layout_constraintBottom_toBottomOf="parent"
                     app:layout_constraintEnd_toStartOf="@+id/countryName"
@@ -46,7 +51,7 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_marginEnd="16dp"
-                    android:text="TextView"
+                    android:text="@{city.country}"
                     app:layout_constraintBottom_toBottomOf="parent"
                     app:layout_constraintEnd_toEndOf="parent"
                     app:layout_constraintTop_toTopOf="parent"
