Navigation to detail. Argument changed.

--- a/app/src/main/res/navigation/navigation.xml
+++ b/app/src/main/res/navigation/navigation.xml
@@ -20,7 +20,7 @@
         android:label="DetailFragment"
         tools:layout="@layout/detail_fragment">
         <argument
-            android:name="city"
-            app:argType="ru.mrfiring.shiftweatherapp.repository.domain.DomainCity" />
+            android:name="cityId"
+            app:argType="long" />
     </fragment>
 </navigation>
