--- a/app/src/main/res/layout/home_fragment.xml
+++ b/app/src/main/res/layout/home_fragment.xml
@@ -20,7 +20,7 @@
             android:layout_marginStart="8dp"
             android:layout_marginEnd="8dp"
 
-            app:listData="@{viewModel.response}"
+            app:listData="@{viewModel.cities}"
 
             app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
             app:layout_constraintBottom_toBottomOf="parent"
