--- a/app/src/main/res/layout/list_item_view.xml
+++ b/app/src/main/res/layout/list_item_view.xml
@@ -19,13 +19,15 @@
         android:layout_height="wrap_content"
         android:onClick="@{() -> clickListener.onClick(city)}">
 
-        <androidx.cardview.widget.CardView
+        <com.google.android.material.card.MaterialCardView
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginTop="8dp"
-            android:alpha="0.75"
+            android:alpha="0.9"
+            android:elevation="3dp"
             app:cardBackgroundColor="@color/list_item_color"
             app:cardCornerRadius="6dp"
+
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
@@ -41,6 +43,7 @@
                     android:layout_height="wrap_content"
                     android:text="@{city.name}"
                     android:textSize="18sp"
+                    android:textAppearance="@style/TextAppearance.Weather.Title"
                     app:layout_constraintBottom_toBottomOf="parent"
                     app:layout_constraintEnd_toStartOf="@+id/countryName"
                     app:layout_constraintHorizontal_bias="0.51"
@@ -72,7 +75,7 @@
                     app:srcCompat="@drawable/ic_launcher_foreground" />
             </androidx.constraintlayout.widget.ConstraintLayout>
 
-        </androidx.cardview.widget.CardView>
+        </com.google.android.material.card.MaterialCardView>
     </androidx.constraintlayout.widget.ConstraintLayout>
 
 
