Created new styles night theme removed

--- a/app/src/main/res/layout/detail_fragment.xml
+++ b/app/src/main/res/layout/detail_fragment.xml
@@ -38,6 +38,7 @@
                     android:text="@{viewModel.container.weather.main}"
                     android:textSize="@dimen/majorTextSize"
                     android:textStyle="bold"
+                    android:textAppearance="@style/TextAppearance.Weather.Title"
                     app:layout_constraintBottom_toTopOf="@id/mainWeatherDesc"
                     app:layout_constraintEnd_toEndOf="parent"
                     app:layout_constraintStart_toStartOf="parent"
@@ -95,6 +96,7 @@
                     android:text="@{viewModel.formattedTemperature}"
                     android:textSize="@dimen/majorTextSize"
                     android:textStyle="bold"
+                    android:textAppearance="@style/TextAppearance.Weather.Title"
                     app:layout_constraintEnd_toEndOf="parent"
                     app:layout_constraintStart_toStartOf="parent"
                     app:layout_constraintTop_toTopOf="parent"
