--- a/app/src/main/res/layout/item_loader.xml
+++ b/app/src/main/res/layout/item_loader.xml
@@ -14,14 +14,11 @@
         <import type="androidx.paging.LoadState"/>
     </data>
 
-    <androidx.constraintlayout.widget.ConstraintLayout
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content">
-
         <androidx.cardview.widget.CardView
             android:layout_width="match_parent"
-            android:layout_height="100dp"
+            android:layout_height="wrap_content"
             app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent">
 
@@ -35,10 +32,10 @@
                     android:layout_height="wrap_content"
                     android:layout_marginTop="8dp"
                     android:text="@string/something_went_wrong"
-                    android:visibility="@{loadState == LoadState.Error ? View.VISIBLE : View.GONE}"
                     app:layout_constraintEnd_toEndOf="parent"
                     app:layout_constraintStart_toStartOf="parent"
                     app:layout_constraintTop_toBottomOf="@+id/retryButton"
+                    app:loadState="@{loadState}"
                     tools:text="Something went wrong" />
 
                 <com.google.android.material.button.MaterialButton
@@ -46,12 +43,12 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_marginTop="16dp"
-                    android:text="@string/retry"
                     android:onClick="@{() -> onRetryListener.onRetry()}"
-                    android:visibility="@{loadState == LoadState.Error ? View.VISIBLE : View.GONE}"
+                    android:text="@string/retry"
                     app:layout_constraintEnd_toEndOf="parent"
                     app:layout_constraintStart_toStartOf="parent"
-                    app:layout_constraintTop_toTopOf="parent" />
+                    app:layout_constraintTop_toTopOf="parent"
+                    app:loadState="@{loadState}" />
 
                 <ProgressBar
                     android:id="@+id/progressBar"
@@ -59,12 +56,11 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:progress="@integer/material_motion_duration_medium_1"
-                    android:visibility="@{loadState == LoadState.Loading ? View.VISIBLE : View.GONE}"
                     app:layout_constraintBottom_toBottomOf="parent"
                     app:layout_constraintEnd_toEndOf="parent"
                     app:layout_constraintStart_toStartOf="parent"
-                    app:layout_constraintTop_toTopOf="parent" />
+                    app:layout_constraintTop_toTopOf="parent"
+                    app:loadState="@{loadState}" />
             </androidx.constraintlayout.widget.ConstraintLayout>
         </androidx.cardview.widget.CardView>
-    </androidx.constraintlayout.widget.ConstraintLayout>
 </layout>
