--- a/app/src/main/res/layout/detail_fragment.xml
+++ b/app/src/main/res/layout/detail_fragment.xml
@@ -8,10 +8,22 @@
             name="viewModel"
             type="ru.mrfiring.shiftweatherapp.detail.DetailViewModel" />
         <import type="android.view.View"/>
+        <import type="ru.mrfiring.shiftweatherapp.detail.ApiStatus"/>
     </data>
     <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent">
+
+        <ImageView
+            android:id="@+id/statusImage"
+            android:layout_width="400dp"
+            android:layout_height="400dp"
+            app:tint="@color/colorPrimary"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintLeft_toLeftOf="parent"
+            app:layout_constraintRight_toRightOf="parent"
+            app:layout_constraintTop_toTopOf="parent"
+            app:apiStatus="@{viewModel.status}"/>
 
         <androidx.cardview.widget.CardView
             android:id="@+id/weatherCard"
@@ -21,7 +33,7 @@
             android:layout_marginTop="8dp"
             android:layout_marginEnd="16dp"
             app:cardBackgroundColor="@color/list_item_color"
-            android:visibility="@{viewModel.container.weather.weatherId > -1 ? View.VISIBLE : View.GONE}"
+            android:visibility="@{viewModel.status == ApiStatus.DONE ? View.VISIBLE : View.GONE}"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent">
@@ -79,6 +91,7 @@
             android:layout_marginStart="16dp"
             android:layout_marginTop="16dp"
             android:layout_marginEnd="16dp"
+            android:visibility="@{viewModel.status == ApiStatus.DONE ? View.VISIBLE : View.GONE}"
             app:cardBackgroundColor="@color/list_item_color"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
@@ -167,5 +180,7 @@
 
 
     </androidx.constraintlayout.widget.ConstraintLayout>
+
+
 
 </layout>
