--- a/app/src/main/res/layout/home_fragment.xml
+++ b/app/src/main/res/layout/home_fragment.xml
@@ -7,11 +7,24 @@
         <variable
             name="viewModel"
             type="ru.mrfiring.shiftweatherapp.home.HomeViewModel" />
+        <import type="android.view.View"/>
+        <import type="ru.mrfiring.shiftweatherapp.detail.ApiStatus"/>
     </data>
 
     <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent">
+
+        <ImageView
+            android:id="@+id/statusImage"
+            android:layout_width="400dp"
+            android:layout_height="400dp"
+            app:tint="@color/colorPrimary"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintLeft_toLeftOf="parent"
+            app:layout_constraintRight_toRightOf="parent"
+            app:layout_constraintTop_toTopOf="parent"
+            app:apiStatus="@{viewModel.status}"/>
 
         <androidx.recyclerview.widget.RecyclerView
             android:id="@+id/citiesList"
@@ -19,6 +32,7 @@
             android:layout_height="match_parent"
             android:layout_marginStart="8dp"
             android:layout_marginEnd="8dp"
+            android:visibility="@{viewModel.status == ApiStatus.LOADING ? View.GONE : View.VISIBLE}"
             app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
