--- a/app/src/main/res/layout/detail_fragment.xml
+++ b/app/src/main/res/layout/detail_fragment.xml
@@ -46,38 +46,35 @@
                     android:id="@+id/mainWeatherText"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:layout_marginTop="16dp"
                     android:text="@{viewModel.container.weather.main}"
+                    android:textAppearance="@style/TextAppearance.Weather.Title"
                     android:textSize="@dimen/majorTextSize"
                     android:textStyle="bold"
-                    android:textAppearance="@style/TextAppearance.Weather.Title"
-                    app:layout_constraintBottom_toTopOf="@id/mainWeatherDesc"
                     app:layout_constraintEnd_toEndOf="parent"
                     app:layout_constraintStart_toStartOf="parent"
-                    app:layout_constraintTop_toTopOf="parent"
+                    app:layout_constraintTop_toBottomOf="@+id/weatherImage"
                     tools:text="Cloudy" />
 
                 <TextView
                     android:id="@+id/mainWeatherDesc"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:layout_marginTop="8dp"
+                    android:layout_marginEnd="8dp"
+                    android:layout_marginBottom="8dp"
                     android:text="@{viewModel.container.weather.description}"
                     app:layout_constraintBottom_toBottomOf="parent"
                     app:layout_constraintEnd_toEndOf="parent"
                     app:layout_constraintStart_toStartOf="parent"
-                    app:layout_constraintTop_toBottomOf="@id/mainWeatherDesc"
+                    app:layout_constraintTop_toBottomOf="@+id/mainWeatherText"
                     tools:text="Some clouds in the air" />
 
                 <ImageView
                     android:id="@+id/weatherImage"
                     android:layout_width="100dp"
                     android:layout_height="100dp"
-                    android:layout_marginStart="8dp"
                     android:layout_marginTop="8dp"
-                    android:layout_marginBottom="8dp"
                     app:imgCode="@{viewModel.container.weather.icon}"
-                    app:layout_constraintBottom_toBottomOf="parent"
+                    app:layout_constraintEnd_toEndOf="parent"
                     app:layout_constraintStart_toStartOf="parent"
                     app:layout_constraintTop_toTopOf="parent"
                     tools:src="@drawable/ic_launcher_foreground" />
