Some moving's and fixing of imports

--- a/app/src/main/res/layout/list_item_view.xml
+++ b/app/src/main/res/layout/list_item_view.xml
@@ -7,7 +7,7 @@
     <data>
         <variable
             name="city"
-            type="ru.mrfiring.shiftweatherapp.repository.domain.DomainCity" />
+            type="ru.mrfiring.shiftweatherapp.domain.DomainCity" />
         <variable
             name="clickListener"
             type="ru.mrfiring.shiftweatherapp.presentation.home.HomeRecyclerViewAdapter.ClickListener" />
